--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -24,10 +24,17 @@
 	</div>
 </div>
 
+
+
+{#optional Metadata#}
 <div class="panel panel-default">
-	<div>
-		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#generalDiv"> ></a></h2>
+	<div class = "panel-heading">
+		<span class="panel-title">
+			<a data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion" href="#generalDiv"> Optional Metadata  </a> 
+		</span>
 	</div>
+	
+	
 	<div id="generalDiv" class="panel-collapse collapse out">
 
 		<p>
