--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
@@ -107,13 +107,13 @@
 
 			{% snippet 'package/snippets/general_fields.html', data=data, errors=errors%}
 
-			{#<h2>Spatial Metadata</h2>#}
+			<h2>Spatial Metadata</h2>
 			{% snippet 'package/snippets/location_fields.html', data=data, errors=errors%}
 
-			{#<h2>Temporal Metadata</h2>#}
+			<h2>Temporal Metadata</h2>
 			{% snippet 'package/snippets/temporal_fields.html', data=data, errors=errors%}
 
-			{#<h2>Variable & Method Information</h2>#}
+			<h2>Variable & Method Information</h2>
 			{% snippet 'package/snippets/variable_fields.html', data=data, errors=errors%}
 
 		{% endif %}
