--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
@@ -3,6 +3,7 @@
 {% block styles %}
 	{{ super() }}
 	{% resource 'resources/mdftemplate_mdfstyle.css' %}
+	{% resource 'resources/bootstrap-theme.css' %}
 {% endblock %}
 
 {% block scripts %}
