--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
@@ -7,10 +7,15 @@
 
 {% block package_spatial_metadata %}
 
+{#optional Metadata#}
 <div class="panel panel-default">
-	<div>
-		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#spatialDiv"> Spatial metadata </a> </h4>
+	<div class = "panel-heading">
+		<span class="panel-title">
+			<a data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion" href="#spatialDiv"> Optional Metadata  </a> 
+		</span>
 	</div>
+	
+	
 	<div id="spatialDiv" class="panel-collapse collapse out">
 
 		<p>
