--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/temporal_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/temporal_fields.html
@@ -7,9 +7,26 @@
 
 {% block package_temporal_metadata %}
 
+
+
+<div class="control-group">
+	<label class="control-label" for="field-status"> <span title="This field is required" class="control-required">*</span> {{ _("Status") }}</label>
+	<div class="controls">
+		<select id="field-status" name="status" data-module="autocomplete" title="Is data collection ongoing, completed, or planned?">
+			{% for status in h.get_status() %}
+			<option value="{{ status }}" {% if type == data.common_core.status %}selected{% endif %} > {{ status }} </option>
+			{% endfor %}
+		</select>
+	</div>
+</div>
+
+
+{#optional Metadata#}
 <div class="panel panel-default">
-	<div>
-		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#temporalDiv"> Temporal metadata </a> </h4>
+	<div class = "panel-heading">
+		<span class="panel-title">
+			<a data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion" href="#temporalDiv"> Optional Metadata  </a> 
+		</span>
 	</div>
 	<div id="temporalDiv" class="panel-collapse collapse out">
 		<p>
@@ -29,16 +46,4 @@
 		</p>
 	</div>
 </div>
-
-<div class="control-group">
-	<label class="control-label" for="field-status"> <span title="This field is required" class="control-required">*</span> {{ _("Status") }}</label>
-	<div class="controls">
-		<select id="field-status" name="status" data-module="autocomplete" title="Is data collection ongoing, completed, or planned?">
-			{% for status in h.get_status() %}
-			<option value="{{ status }}" {% if type == data.common_core.status %}selected{% endif %} > {{ status }} </option>
-			{% endfor %}
-		</select>
-	</div>
-</div>
-
 {% endblock package_temporal_metadata %}
