--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
@@ -6,9 +6,16 @@
 {% set errors = errors or {} %}
 
 {% block package_variable_metadata %}
+
+
+{{ form.input('observed_variables', id='field-observed_variables', label=_('Observed Variables'), placeholder=_('e.g., temperature, streamflow, land cover, elevation'), value=data.common_core.observed_variables, error=errors.obsvar, classes=['control-full', 'control-medium'], attrs={'title': 'comma separated list of measured/observed variables'}, is_required=true) }}
+
+{#optional Metadata#}
 <div class="panel panel-default">
-	<div>
-		<h2 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#vmDiv"> Variable & Method Information </a> </h4>
+	<div class = "panel-heading">
+		<span class="panel-title">
+			<a data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion" href="#vmDiv"> Optional Metadata  </a> 
+		</span>
 	</div>
 	<div id="vmDiv" class="panel-collapse collapse out">
 
@@ -23,8 +30,5 @@
 		</p>
 	</div>
 </div>
-
-{{ form.input('observed_variables', id='field-observed_variables', label=_('Observed Variables'), placeholder=_('e.g., temperature, streamflow, land cover, elevation'), value=data.common_core.observed_variables, error=errors.obsvar, classes=['control-full', 'control-medium'], attrs={'title': 'comma separated list of measured/observed variables'}, is_required=true) }}
-
 {% endblock package_variable_metadata %}
 
