forgot to switch some locations from rights to access_information

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
@@ -91,10 +91,10 @@
 							</tr>
 							{% endif %}
 			
-							{% if pkg_dict.common_core.rights %}
+							{% if pkg_dict.common_core.access_information %}
 							<tr>
-								<th scope="row" class="dataset-label">{{ _("Rights") }}</th>
-								<td class="dataset-details">{{ pkg_dict.common_core.rights }}</td>
+								<th scope="row" class="dataset-label">{{ _("access_information") }}</th>
+								<td class="dataset-details">{{ pkg_dict.common_core.access_information }}</td>
 							</tr>
 							{% endif %}
 			
