--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -11,7 +11,7 @@
 
 {{ form.input('intended_use', id='field-intended_use', label=_('Intended Use'), placeholder=_('for research of ...'), value=data.common_core.intended_use, error=errors.intuse, classes=['control-medium'], attrs={'title': "How do you plan on using the data"}, is_required=true) }}
 
-{{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.common_core.rights, error=errors.rights, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
+{{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.common_core.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
 
 <div class="control-group">
 	<label class="control-label" for="field-type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
